# tools_previewer

./: .gitignore  BUILD.gn  Jenkinsfile  OAT.xml  README.en.md  README.md  README_zh.md  RichPreviewer.cpp  ThinPreviewer.cpp  build.sh  bundle.json  dependency.xml
automock/: BUILD.gn  build_jsmock_system_plugin.js  js_framework_build.sh  prebuild_env.sh
automock/mock-generate/: .babelrc  .eslintrc  build.js  tsconfig.json
automock/mock-generate/src/: main.ts
automock/mock-generate/src/common/: commonUtils.ts  constants.ts
automock/mock-generate/src/declaration-node/: callSignatureDeclaration.ts  classDeclaration.ts  constructorDeclaration.ts  enumDeclaration.ts  functionDeclaration.ts  heritageClauseDeclaration.ts  importAndExportDeclaration.ts  indexSignatureDeclaration.ts  interfaceDeclaration.ts  methodDeclaration.ts  methodSignatureDeclaration.ts  moduleDeclaration.ts  propertyDeclaration.ts  propertySignatureDeclaration.ts  sourceFileElementsAssemply.ts  typeAliasDeclaration.ts  typeParameterDeclaration.ts  variableStatementResolve.ts
automock/mock-generate/src/generate/: generateClassDeclaration.ts  generateCommonFunction.ts  generateCommonMethod.ts  generateCommonMethodSignature.ts  generateCommonUtil.ts  generateEnumDeclaration.ts  generateExportFunction.ts  generateImportEqual.ts  generateIndex.ts  generateIndexSignature.ts  generateInterfaceDeclaration.ts  generateMockJsFile.ts  generateModuleDeclaration.ts  generatePropertyDeclaration.ts  generatePropertySignatureDeclaration.ts  generateStaticFunction.ts  generateSystemIndex.ts  generateTypeAlias.ts  generateVariableStatementDeclaration.ts
cli/: BUILD.gn  CommandLine.cpp  CommandLine.h  CommandLineFactory.cpp  CommandLineFactory.h  CommandLineInterface.cpp  CommandLineInterface.h
cmake/: mingw_clang.cmake  mingw_clang_noerror.cmake
gn/: config.gni
jsapp/: BUILD.gn  JsApp.cpp  JsApp.h  StageContext.cpp  StageContext.h
jsapp/lite/: JsAppImpl.cpp  JsAppImpl.h  TimerTaskHandler.cpp  TimerTaskHandler.h  ui_text_language.cpp  ui_text_language.h
jsapp/rich/: JsAppImpl.cpp  JsAppImpl.h
mock/: BUILD.gn  KeyInput.cpp  KeyInput.h  LanguageManager.cpp  LanguageManager.h  MouseInput.cpp  MouseInput.h  MouseWheel.cpp  MouseWheel.h  SystemCapability.cpp  SystemCapability.h  VirtualMessage.cpp  VirtualMessage.h  VirtualScreen.cpp  VirtualScreen.h
mock/lite/: AblityKit.cpp  AsyncWorkManager.cpp  AsyncWorkManager.h  BatteryModuleImpl.cpp  BrightnessModuleImpl.cpp  GeoLocation.cpp  HalSysParam.cpp  JsAsyncWork.cpp  KeyInputImpl.cpp  KeyInputImpl.h  LanguageManagerImpl.cpp  LanguageManagerImpl.h  MouseInputImpl.cpp  MouseInputImpl.h  MouseWheelImpl.cpp  MouseWheelImpl.h  NativeTimer.cpp  SensorModuleImpl.cpp  VibratorModuleImpl.cpp  VirtualLocation.cpp  VirtualLocation.h  VirtualMessageImpl.cpp  VirtualMessageImpl.h  VirtualScreenImpl.cpp  VirtualScreenImpl.h
mock/rich/: KeyInputImpl.cpp  KeyInputImpl.h  LanguageManagerImpl.cpp  LanguageManagerImpl.h  MouseInputImpl.cpp  MouseInputImpl.h  MouseWheelImpl.cpp  MouseWheelImpl.h  VirtualMessageImpl.cpp  VirtualMessageImpl.h  VirtualScreenImpl.cpp  VirtualScreenImpl.h
util/: BUILD.gn  CallbackQueue.cpp  CallbackQueue.h  ClipboardHelper.h  CommandParser.cpp  CommandParser.h  CppTimer.cpp  CppTimer.h  CppTimerManager.cpp  CppTimerManager.h  CrashHandler.h  EndianUtil.cpp  EndianUtil.h  FileSystem.cpp  FileSystem.h  Interrupter.cpp  Interrupter.h  JsonReader.cpp  JsonReader.h  KeyboardHelper.h  LocalDate.h  LocalSocket.h  ModelConfig.h  ModelManager.cpp  ModelManager.h  PreviewerEngineLog.cpp  PreviewerEngineLog.h  PublicMethods.cpp  PublicMethods.h  SharedData.h  SharedDataManager.cpp  SharedDataManager.h  StringHelper.h  TimeTool.cpp  TimeTool.h  TraceTool.cpp  TraceTool.h  WebSocketServer.cpp  WebSocketServer.h
util/linux/: ClipboardHelper.cpp  ClipboardX11.cpp  ClipboardX11.h  KeyboardHelper.cpp
util/unix/: ClipboardHelper.cpp  ClipboardObjc.h  ClipboardObjc.mm  CrashHandler.cpp  KeyboardHelper.cpp  KeyboardObjc.h  KeyboardObjc.mm  LocalDate.cpp  LocalSocket.cpp
util/windows/: ClipboardHelper.cpp  CrashHandler.cpp  KeyboardHelper.cpp  LocalDate.cpp  LocalSocket.cpp  StringHelper.cpp
